# curve-math

./: .gitignore  Cargo.toml  README.md
.github/workflows/: fuzz-arbitrum.yml  fuzz-base.yml  fuzz-ethereum.yml  fuzz.yml  index-pools.yml  unit-tests.yml
benches/revm-comparison/: Cargo.toml
benches/revm-comparison/fixtures/: crvUSD_FXN.json  crvUSD_WETH_CRV.json  sUSDS_USDT.json
crates/curve-adapter/: Cargo.toml  README.md
crates/curve-adapter/src/: build.rs  detect.rs  lib.rs  variant.rs
crates/curve-adapter/tests/: fuzz_registry.rs
crates/curve-adapter/tests/registry/: 1.toml  1_pending.toml  42161.toml  8453.toml
crates/curve-math/: Cargo.toml
crates/curve-math/benches/revm-comparison/: generate_fixtures.py
crates/curve-math/benches/revm-comparison/benches/: swap.rs
crates/curve-math/benches/revm-comparison/fixtures/: 3pool.json
crates/curve-math/benches/revm-comparison/src/: lib.rs
crates/curve-math/docs/: integration.md
crates/curve-math/src/: exchange.rs  exchange_ng.rs  exchange_tricrypto_v1.rs  exchange_twocrypto_ng.rs  lib.rs  pool.rs
crates/curve-math/src/core/: stableswap_alend.rs  stableswap_meta.rs  stableswap_ng.rs  stableswap_v0.rs  stableswap_v1.rs  stableswap_v2.rs  tricrypto_ng.rs  tricrypto_v1.rs  twocrypto_ng.rs  twocrypto_stable.rs  twocrypto_v1.rs
crates/curve-math/src/swap/: stableswap_alend.rs  stableswap_meta.rs  stableswap_ng.rs  stableswap_v0.rs  stableswap_v1.rs  stableswap_v2.rs  twocrypto_ng.rs  twocrypto_stable.rs  twocrypto_v1.rs
crates/curve-math/tests/: fuzz_differential.rs  fuzz_properties.rs  fuzz_registry.rs
crates/curve-math/tools/: index-pools.py
docs/: integration.md
registry/: 1.toml  8453.toml
src/: lib.rs
src/core/: stableswap_alend.rs  stableswap_v0.rs  stableswap_v1.rs  stableswap_v2.rs  tricrypto_v1.rs  twocrypto_ng.rs  twocrypto_v1.rs
src/swap/: mod.rs  stableswap_alend.rs  stableswap_ng.rs  stableswap_v0.rs  tricrypto_ng.rs  tricrypto_v1.rs  twocrypto_ng.rs
tests/: fuzz_properties.rs  fuzz_registry.rs
tools/: detect_variant.py  index-pools.py
