[workspace]
members = [".", "benches/revm-comparison"]

[package]
name = "curve-math"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Pure Rust port of Curve Finance AMM math (StableSwap + CryptoSwap). Wei-level precision, fuzz-verified against on-chain get_dy for 200+ pools."
license = "MIT"
repository = "https://github.com/sunce86/curve-math"
readme = "README.md"
keywords = ["curve", "amm", "defi", "stableswap", "cryptoswap"]
categories = ["cryptography::cryptocurrencies", "mathematics"]
exclude = ["benches/", "registry/", "tools/", ".github/", "docs/"]

[dependencies]
alloy-primitives = "1.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
alloy = { version = "1.7", features = ["provider-http", "contract", "sol-types"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[features]
default = []
swap = []
