[package]
name = "revm-comparison"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
curve-math = { path = "../..", features = ["swap"] }
revm = "36"
alloy-primitives = "1.5"
alloy-sol-types = "1.5"
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "swap"
harness = false
