[package]
name = "curve-adapter"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.80"
description = "Adapts raw on-chain Curve pool data into curve-math Pool instances. Variant detection, rate/precision computation, and pool construction."
license = "MIT"
repository = "https://github.com/sunce86/curve-math"
keywords = ["curve", "amm", "defi", "indexer", "pools"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["build"]
build = ["curve-math/swap"]
serde = ["dep:serde", "alloy-primitives/serde"]

[dependencies]
alloy-primitives = "1"
curve-math = { path = "../curve-math", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
