[package]
name = "curve-math"
version = "0.1.0-alpha.2"
edition = "2021"
rust-version = "1.80"
description = "Pure Rust port of Curve Finance AMM math (StableSwap + CryptoSwap). Wei-level precision, fuzz-verified against on-chain get_dy for 200+ pools."
license = "MIT"
repository = "https://github.com/sunce86/curve-math"
keywords = ["curve", "amm", "defi", "stableswap", "cryptoswap"]
categories = ["cryptography::cryptocurrencies", "mathematics"]

[dependencies]
alloy-primitives = "1.5"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
alloy = { version = "1.7", features = ["provider-http", "contract", "sol-types"] }

[features]
default = []
swap = []
serde = ["dep:serde", "alloy-primitives/serde"]
